Update UI and blog

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Nguyễn Kha | Portfolio</title>
+  <title>Nguyễn Kha | Projects</title>
   <link rel="stylesheet" href="./styles.css" />
   <link rel="stylesheet" href="./home.css" />
-  <meta name="description" content="Dự án và portfolio của Nguyễn Kha" />
+  <meta name="description" content="Dự án và bài tập của Nguyễn Kha" />
 </head>
 <body>
   <header class="site-header">
@@ -15,7 +15,6 @@
       <nav class="nav">
         <a class="nav-link" href="./index.html">HOME</a>
         <a class="nav-link" href="./about.html">ABOUT ME</a>
-        <a class="nav-link active" href="./portfolio.html">PORTFOLIO</a>
         <a class="nav-link" href="./blog/index.html">BLOG</a>
         <a class="nav-link" href="./contact.html">SKILLS</a>
       </nav>
@@ -24,7 +23,7 @@
 
   <main class="container">
     <section class="section">
-      <h1 class="page-title">Portfolio</h1>
+      <h1 class="page-title">Projects</h1>
       <p class="page-subtitle">Các dự án học tập và cá nhân của mình.</p>
 
       <div class="grid">
@@ -51,7 +50,7 @@
         <article class="card">
           <h3 class="card-title">Dự án học tập / cá nhân</h3>
           <ul class="list">
-            <li>Website Portfolio cá nhân</li>
+            <li>Website Profile cá nhân</li>
             <li>Mini project Java / C#</li>
             <li>Bài tập Web nâng cao</li>
           </ul>
